# CodeGen

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  codegen.pri  codegen.py  setup.py  template.mako
cmake/Modules/: codegen.cmake
codegen/: __main__.py  cli.py  codegen.py
codegen/data/: template.mako
include/codegen/: EnumReflection.h
